# xbox-gamepad-overlay

./: .gitignore  CrosshairsApp.sln  CrosshairsApp.vcxproj  CrosshairsApp.vcxproj.filters  Gamepad.cpp  Gamepad.h  HotkeyInput.cpp  HotkeyInput.h  Images.cpp  Images.h  README.md  Source.cpp  imgui.ini
ImGuiOverlay/x64/Debug/: ImGuiOverlay.exe.recipe  vc143.idb
ImGuiOverlay/x64/Debug/ImGuiOverlay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ImGuiOverlay.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
project/: CMakeLists.txt
project/app/: CMakeLists.txt
project/app/include/: images.h
project/app/src/: gamepad.cpp  hotkey_input.cpp  images.cpp  main.cpp
